tetrate/tis0201/.chainsaw-test/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bad-resource-1
spec:
  host: "my-service.example-namespace.svc.cluster.local"
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
