tetrate/tis0201/.chainsaw-test/des-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: destination-rule-1
spec:
  host: "my-service.example-namespace.svc.cluster.local"
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
