tetrate/tis0201/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-overlapping-destinationrules
spec:
  validationFailureAction: Enforce
